--- a/resources/templates/changelog.md.ejs
+++ b/resources/templates/changelog.md.ejs
@@ -23,5 +23,5 @@ See the list of the breaking changes below for details.
 <%_ } -%>
 <%_ if ( compareUrl ) { -%>
 
-Compare with the previous release: [<%- changelog.previousRelease.versionString %>](<%- compareUrl %>)
+Compare with the previous release: [<%- changelog.parentRelease.versionString %>](<%- compareUrl %>)
 <%_ } -%>
